@@ -1,0 +1,67 @@
+% txi-is.tex -- Texinfo support for Icelandic, version 1.0 (2009/03/18).
+% Based on txi-en.tex (version 1.5, 2007/07/01) and icelandic.dtx (1.1g,
+% 2005/03/30).
+%
+% Copyright (C) 2009 Arni Magnusson
+%
+% This program is free software; you can redistribute it and/or modify
+% it under the terms of the GNU General Public License as published by
+% the Free Software Foundation; either version 3 of the License, or
+% (at your option) any later version.
+%
+% This program is distributed in the hope that it will be useful,
+% but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details.
+%
+% You should have received a copy of the GNU General Public License
+% along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+\gdef\putwordAppendix{Vi{\dh}auki}
+\gdef\putwordChapter{Kafli}
+\gdef\putwordfile{skr\'a}
+\gdef\putwordin{\'i}
+\gdef\putwordIndexIsEmpty{(Atri{\dh}isor{\dh}askr\'a er t\'om)}
+\gdef\putwordIndexNonexistent{(Atri{\dh}isor{\dh}askr\'a er ekki til)}
+\gdef\putwordInfo{Info}
+\gdef\putwordInstanceVariableof{Tilviksbreyta \'i}
+\gdef\putwordMethodon{A{\dh}fer{\dh} fyrir}
+\gdef\putwordNoTitle{Enginn titill}
+\gdef\putwordof{\'i}
+\gdef\putwordon{fyrir}
+\gdef\putwordpage{bla{\dh}s\'i{\dh}a}
+\gdef\putwordsection{undirkafli}
+\gdef\putwordSection{Undirkafli}
+\gdef\putwordsee{sj\'a}
+\gdef\putwordSee{Sj\'a}
+\gdef\putwordShortTOC{Stutt efnisyfirlit}
+\gdef\putwordTOC{Efnisyfirlit}
+%
+\gdef\putwordMJan{jan\'uar}
+\gdef\putwordMFeb{febr\'uar}
+\gdef\putwordMMar{mars}
+\gdef\putwordMApr{apr\'il}
+\gdef\putwordMMay{ma\'i}
+\gdef\putwordMJun{j\'uni}
+\gdef\putwordMJul{j\'ul\'i}
+\gdef\putwordMAug{\'ag\'ust}
+\gdef\putwordMSep{september}
+\gdef\putwordMOct{okt\'ober}
+\gdef\putwordMNov{n\'ovember}
+\gdef\putwordMDec{desember}
+%
+\gdef\putwordDefmac{Fj\"olvi}
+\gdef\putwordDefspec{S\'erstakt form}
+\gdef\putwordDefvar{Breyta}
+\gdef\putwordDefopt{Notendaval}
+\gdef\putwordDeffunc{Fall}
+
+% Produces Day Month Year style of output.
+\def\today{%
+  \number\day\space
+  \ifcase\month
+  \or\putwordMJan\or\putwordMFeb\or\putwordMMar\or\putwordMApr
+  \or\putwordMMay\or\putwordMJun\or\putwordMJul\or\putwordMAug
+  \or\putwordMSep\or\putwordMOct\or\putwordMNov\or\putwordMDec
+  \fi
+  \space\number\year}
